Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
11.4, 11.8, 12.3, 13.0, 13.1
-
Can result in hang or crash
-
Fixed an assertion failure with spatial index predicate locks
-
Q3/2026 Server Maintenance
Description
Assertion found on debug build of 12.3
|
origin/12.3 66b3c6784689fbb65110a5b21efcb815a8bcde24 |
# 2026-05-29T02:03:33 [3922965] | 2026-05-29 2:03:14 18 [ERROR] InnoDB: Transaction was aborted due to Record changed
|
# 2026-05-29T02:03:33 [3922965] | mariadbd: /data/Server/12.3A/storage/innobase/lock/lock0lock.cc:1360: void lock_rec_queue_validate_bypass(const ib_lock_t*, ulint): Assertion `!(mode & 2048U) || (mode & 512U) || is_supremum' failed.
|
|
StackTrace |
# 2026-05-29T02:17:36 [3922965] | #0 __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>) at ./nptl/pthread_kill.c:44
|
# 2026-05-29T02:17:36 [3922965] | #1 __pthread_kill_internal (signo=6, threadid=<optimized out>) at ./nptl/pthread_kill.c:78
|
# 2026-05-29T02:17:36 [3922965] | #2 __GI___pthread_kill (threadid=<optimized out>, signo=signo@entry=6) at ./nptl/pthread_kill.c:89
|
# 2026-05-29T02:17:36 [3922965] | #3 0x000079c43cd5726e in __GI_raise (sig=sig@entry=6) at ../sysdeps/posix/raise.c:26
|
# 2026-05-29T02:17:36 [3922965] | #4 0x000079c43cd3a8ff in __GI_abort () at ./stdlib/abort.c:79
|
# 2026-05-29T02:17:36 [3922965] | #5 0x000079c43cd3a81b in __assert_fail_base (fmt=0x79c43cee21e8 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=assertion@entry=0x5da59e673a78 "!(mode & 2048U) || (mode & 512U) || is_supremum", file=file@entry=0x5da59e670ec8 "/data/Server/12.3A/storage/innobase/lock/lock0lock.cc", line=line@entry=1360, function=function@entry=0x5da59e673aa8 "void lock_rec_queue_validate_bypass(const ib_lock_t*, ulint)") at ./assert/assert.c:94
|
# 2026-05-29T02:17:36 [3922965] | #6 0x000079c43cd4d507 in __assert_fail (assertion=0x5da59e673a78 "!(mode & 2048U) || (mode & 512U) || is_supremum", file=0x5da59e670ec8 "/data/Server/12.3A/storage/innobase/lock/lock0lock.cc", line=1360, function=0x5da59e673aa8 "void lock_rec_queue_validate_bypass(const ib_lock_t*, ulint)") at ./assert/assert.c:103
|
# 2026-05-29T02:17:36 [3922965] | #7 0x00005da59e190fc7 in lock_rec_queue_validate_bypass (checked_lock=checked_lock@entry=0x5da5a134a448, heap_no=heap_no@entry=0) at /data/Server/12.3A/storage/innobase/lock/lock0lock.cc:1360
|
# 2026-05-29T02:17:36 [3922965] | #8 0x00005da59e191136 in lock_rec_queue_validate_bypass (lock=lock@entry=0x5da5a134a448) at /data/Server/12.3A/storage/innobase/lock/lock0lock.cc:1394
|
# 2026-05-29T02:17:36 [3922965] | #9 0x00005da59e198b66 in lock_reset_lock_and_trx_wait (lock=lock@entry=0x5da5a134a448) at /data/Server/12.3A/storage/innobase/lock/lock0lock.cc:1414
|
# 2026-05-29T02:17:36 [3922965] | #10 0x00005da59e19c576 in lock_cancel_waiting_and_release<true> (lock=0x5da5a134a448) at /data/Server/12.3A/storage/innobase/lock/lock0lock.cc:6671
|
# 2026-05-29T02:17:36 [3922965] | #11 0x00005da59e19ccf7 in Deadlock::report (trx=trx@entry=0x68291c00, current_trx=current_trx@entry=true) at /data/Server/12.3A/storage/innobase/lock/lock0lock.cc:7317
|
# 2026-05-29T02:17:36 [3922965] | #12 0x00005da59e19dd46 in Deadlock::check_and_resolve (trx=trx@entry=0x68291c00, wait_lock=wait_lock@entry=0x5da5a134a448) at /data/Server/12.3A/storage/innobase/lock/lock0lock.cc:7374
|
# 2026-05-29T02:17:36 [3922965] | #13 0x00005da59e1a027e in lock_wait (thr=thr@entry=0x5853301d86f8) at /data/Server/12.3A/storage/innobase/lock/lock0lock.cc:2327
|
# 2026-05-29T02:17:36 [3922965] | #14 0x00005da59e2659f9 in row_mysql_handle_errors (new_err=new_err@entry=0x65bd026656cc, trx=trx@entry=0x68291c00, thr=thr@entry=0x5853301d86f8, savept=savept@entry=0x65bd026656d8) at /data/Server/12.3A/storage/innobase/row/row0mysql.cc:698
|
# 2026-05-29T02:17:36 [3922965] | #15 0x00005da59e266d78 in row_insert_for_mysql (mysql_rec=mysql_rec@entry=0x5853301cd9c0 "\241\003", prebuilt=0x5853301d8008, ins_mode=<optimized out>) at /data/Server/12.3A/storage/innobase/row/row0mysql.cc:1324
|
# 2026-05-29T02:17:36 [3922965] | #16 0x00005da59e128b03 in ha_innobase::write_row (this=0x5853301cd150, record=0x5853301cd9c0 "\241\003") at /data/Server/12.3A/storage/innobase/handler/ha_innodb.cc:7765
|
# 2026-05-29T02:17:36 [3922965] | #17 0x00005da59de93577 in handler::ha_write_row (this=0x5853301cd150, buf=0x5853301cd9c0 "\241\003") at /data/Server/12.3A/sql/handler.cc:8521
|
# 2026-05-29T02:17:36 [3922965] | #18 0x00005da59db422a5 in Write_record::single_insert (this=this@entry=0x65bd02665bd0, inserted=inserted@entry=0x65bd02665a40) at /data/Server/12.3A/sql/sql_insert.cc:2390
|
# 2026-05-29T02:17:36 [3922965] | #19 0x00005da59db42b58 in Write_record::write_record (this=this@entry=0x65bd02665bd0) at /data/Server/12.3A/sql/sql_insert.cc:2432
|
# 2026-05-29T02:17:36 [3922965] | #20 0x00005da59db49918 in mysql_insert (thd=thd@entry=0x585330000d60, table_list=<optimized out>, fields=..., values_list=..., update_fields=..., update_values=..., duplic=<optimized out>, ignore=<optimized out>, result=<optimized out>) at /data/Server/12.3A/sql/sql_insert.cc:1233
|
# 2026-05-29T02:17:36 [3922965] | #21 0x00005da59db81e4c in mysql_execute_command (thd=thd@entry=0x585330000d60, is_called_from_prepared_stmt=is_called_from_prepared_stmt@entry=false) at /data/Server/12.3A/sql/sql_parse.cc:4505
|
# 2026-05-29T02:17:36 [3922965] | #22 0x00005da59db86719 in mysql_parse (thd=thd@entry=0x585330000d60, rawbuf=<optimized out>, length=<optimized out>, parser_state=parser_state@entry=0x65bd026663c0) at /data/Server/12.3A/sql/sql_parse.cc:7949
|
# 2026-05-29T02:17:36 [3922965] | #23 0x00005da59db87d6d in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x585330000d60, packet=packet@entry=0x58533000b6c1 "INSERT INTO iv_spatial_t (pt, poly) VALUES (\nST_GeomFromText( CONCAT('POINT(', 2, ' ', 6, ')') ),\nST_GeomFromText('POLYGON((5 5, 15 5, 15 15, 5 15, 5 5))')\n) /* E_R Thread2 QNO 16509 CON_ID 17 */ ", packet_length=packet_length@entry=196, blocking=blocking@entry=true) at /data/Server/12.3A/sql/sql_parse.cc:1903
|
# 2026-05-29T02:17:36 [3922965] | #24 0x00005da59db89372 in do_command (thd=thd@entry=0x585330000d60, blocking=blocking@entry=true) at /data/Server/12.3A/sql/sql_parse.cc:1437
|
# 2026-05-29T02:17:36 [3922965] | #25 0x00005da59dce105d in do_handle_one_connection (connect=<optimized out>, connect@entry=0x5da5a1a99f50, put_in_cache=put_in_cache@entry=true) at /data/Server/12.3A/sql/sql_connect.cc:1503
|
# 2026-05-29T02:17:36 [3922965] | #26 0x00005da59dce127a in handle_one_connection (arg=0x5da5a1a99f50) at /data/Server/12.3A/sql/sql_connect.cc:1415
|
# 2026-05-29T02:17:36 [3922965] | #27 0x000079c43cdaea94 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:447
|
# 2026-05-29T02:17:36 [3922965] | #28 0x000079c43ce3ba34 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:100
|
|
RQG startup options |
|
# $RQG_HOME/rqg.pl \
|
# --gendata=conf/engines/engine_stress.zz \
|
# --views \
|
# --grammar=conf/engines/engine_stress.yy \
|
# --redefine=conf/mariadb/modules/locks.yy \
|
# --reporters=Mariabackup_linux \
|
# --mysqld=--loose-innodb-log-file-size=200M \
|
# --mysqld=--loose-innodb_lock_schedule_algorithm=fcfs \
|
# --mysqld=--loose-idle_write_transaction_timeout=0 \
|
# --mysqld=--loose-idle_transaction_timeout=0 \
|
# --mysqld=--loose-idle_readonly_transaction_timeout=0 \
|
# --mysqld=--connect_timeout=60 \
|
# --mysqld=--interactive_timeout=28800 \
|
# --mysqld=--slave_net_timeout=60 \
|
# --mysqld=--net_read_timeout=30 \
|
# --mysqld=--net_write_timeout=60 \
|
# --mysqld=--loose-table_lock_wait_timeout=50 \
|
# --mysqld=--wait_timeout=28800 \
|
# --no_mask \
|
# --queries=10000000 \
|
# --seed=random \
|
# --reporters=None \
|
# --reporters=ErrorLog \
|
# --reporters=Deadlock \
|
# --validators=None \
|
# --mysqld=--log_output=none \
|
# --mysqld=--log_bin_trust_function_creators=1 \
|
# --mysqld=--loose-debug_assert_on_not_freed_memory=0 \
|
# --engine=InnoDB \
|
# --restart_timeout=240 \
|
# --mysqld=--plugin-load-add=file_key_management.so \
|
# --mysqld=--loose-file-key-management-filename=$RQG_HOME/conf/mariadb/encryption_keys.txt \
|
# --mysqld=--plugin-load-add=provider_lzo.so \
|
# --mysqld=--plugin-load-add=provider_bzip2.so \
|
# --mysqld=--plugin-load-add=provider_lzma.so \
|
# --mysqld=--plugin-load-add=provider_snappy.so \
|
# --mysqld=--plugin-load-add=provider_lz4.so \
|
# --mysqld=--loose-innodb_compression_level=1 \
|
# --duration=300 \
|
# --mysqld=--loose-innodb_fatal_semaphore_wait_threshold=300 \
|
# --mysqld=--lock-wait-timeout=86400 \
|
# --mysqld=--innodb-lock-wait-timeout=50 \
|
# --mysqld=--sql_mode=traditional \
|
# --mysqld=--innodb_file_per_table=1 \
|
# --mysqld=--loose-innodb_read_only_compressed=OFF \
|
# --mysqld=--innodb_stats_persistent=off \
|
# --mysqld=--innodb_adaptive_hash_index=on \
|
# --mysqld=--innodb_random_read_ahead=ON \
|
# --mysqld=--loose-innodb_evict_tables_on_commit_debug=on \
|
# --threads=2 \
|
# --rr=rr record --chaos --wait \
|
# --mysqld=--innodb_undo_log_truncate=OFF \
|
# --mysqld=--innodb_rollback_on_timeout=OFF \
|
# --mysqld=--innodb_page_size=4K \
|
# --mysqld=--innodb-buffer-pool-size=6M \
|
# --vardir_type=fast \
|
# --redefine=conf/mariadb/redefine_innodb_spatial.yy \
|
# --no_mask \
|
# --batch \
|
# --basedir1=/Server_bin/12.3A_debug_Og \
|
# --basedir2=/Server_bin/12.3A_debug_Og \
|
# --script_debug=_nix_ \
|
# --major_runid=1780042761 \
|
# --minor_runid=153
|
RR trace is present on SDP :-
/data/results/1780042761/TBR-2420
Attachments
Issue Links
- duplicates
-
MDEV-39799 Assertion `!(wait_lock->is_insert_intention()) || (wait_lock->is_gap()) || is_supremum' failed
-
- Closed
-
- is caused by
-
MDEV-34877 Port "Bug #11745929 Change lock priority so that the transaction holding S-lock gets X-lock first" fix from MySQL to MariaDB
-
- Closed
-
- relates to
-
MDEV-39799 Assertion `!(wait_lock->is_insert_intention()) || (wait_lock->is_gap()) || is_supremum' failed
-
- Closed
-